--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -1,1 +1,8 @@
-@import "./db-theme/reset";
+@import './db-theme/fonts';
+@import './db-theme/variables';
+@import './db-theme/reset';
+@import './db-theme/classes';
+// @import './db-theme/buttons';
+@import './db-theme/animation';
+@import './db-theme/media';
+@import './db-theme/test';
