--- a/styles/db-theme/_reset.scss
+++ b/styles/db-theme/_reset.scss
@@ -1,4 +1,62 @@
+/*===============*/
+/*   CSS RESET   */
+/*===============*/
 * {
   margin: 0;
   padding: 0;
+  border: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+  &::before,
+  &::after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: $primaryFontFamily;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1em;
+  // background-color: transparent;
+  background-color: #F2F2F2;
+  min-width: 380px;
+  width: 100%;
+}
+
+html, body, main, nav, header, footer, aside, section, div {
+  display: block;
+}
+
+h1, h2, h3, h4, h5, h6, p, span, blockquote, b, i, em {
+  line-height: 1em;
+}
+
+a,
+button,
+input[type='submit'],
+input[type='button'] {
+  text-decoration: none;
+  line-height: 1em;
+  display: block;
+  background-color: transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: transparent;
+  transition:
+    all $hoverTransitionDuration ease-in-out 0ms;
+  cursor: pointer;
+}
+
+ul, ol {
+  list-style: none inside;
 }
