--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="{{ 'vue.js' | asset_url }}"></script>
 
   </head>
-  <body>
+  <body class="db-scroll-bar">
 
     <div id="root" class="db-site">
 
