--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -1,3 +1,273 @@
 <footer class="db-footer site-footer">
-  Footer
+  <section class="db-section db-section--newsletter">
+    <div class="db-container">
+      <div class="db-row">
+        <div class="db-col">
+          <a
+            class="db-site-link"
+            title="Deadbeat"
+            href="/">
+            <img
+              class="db-site-logo db-img"
+              alt="Deadbeat"
+              title="Deadbeat"
+              src="{{ 'DB_Main_logo-v01-264x96.png' | asset_url }}"
+              width=""
+              height=""
+              loading="lazy" />
+          </a>
+          <h4>
+            Subsribe to our newsletter
+          </h4>
+          <p>
+            Get updated to our exciting promotions, limited offers, articles and resources.
+          </p>
+          <form
+            class="db-form--newsletter db-form"
+            method="post"
+            action="/contact#contact_form"
+            accept-charset="UTF-8">
+            <div class="db-form-wrap">
+              <div class="db-form-group">
+                <input
+                  class="db-form-input"
+                  type="email"
+                  placeholder="">
+                <button class="db-btn--form-submit db-btn" type="button">
+                  SUBSCRIBE
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="db-col">
+          <img
+            class="db-img-figure01 db-img"
+            alt=""
+            title=""
+            src="{{ 'DB_Footer_NewsletterFigure01_v01-809x512.png' | asset_url }}"
+            width=""
+            height=""
+            loading="lazy" />
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="db-section db-section--primary">
+    <div class="db-container">
+      <div class="db-row">
+        <div class="db-col">
+          <div class="db-inner-row">
+            <a
+              class="db-elevate-link"
+              title=""
+              href="">
+              <img
+                class="db-elevate-logo db-img"
+                alt=""
+                title=""
+                src="{{ 'DB_Elevate_logo-v01-72x81.png' | asset_url }}"
+                width=""
+                height=""
+                loading="lazy" />
+            </a>
+            <p>
+              We are a Web3 brand focused on creating the story world and building the story canon with us… ON AIR!.
+            </p>
+          </div>
+          <p class="db-copyright">
+            &copy; 2023 Deadbeat - All rights reserved
+          </p>
+        </div>
+        <div class="db-col">
+          <ul class="db-menu-list">
+            <li class="db-menu-item">
+              <a
+                class="db-menu-link"
+                title=""
+                href="">
+                Lorem Ipsum
+              </a>
+            </li>
+            <li class="db-menu-item">
+              <a
+                class="db-menu-link"
+                title=""
+                href="">
+                Lorem Ipsum
+              </a>
+            </li>
+            <li class="db-menu-item">
+              <a
+                class="db-menu-link"
+                title=""
+                href="">
+                Lorem Ipsum
+              </a>
+            </li>
+            <li class="db-menu-item">
+              <a
+                class="db-menu-link"
+                title=""
+                href="">
+                Lorem Ipsum
+              </a>
+            </li>
+            <li class="db-menu-item">
+              <a
+                class="db-menu-link"
+                title=""
+                href="">
+                Lorem Ipsum
+              </a>
+            </li>
+            <li class="db-menu-item">
+              <a
+                class="db-menu-link"
+                title=""
+                href="">
+                Lorem Ipsum
+              </a>
+            </li>
+            <li class="db-menu-item">
+              <a
+                class="db-menu-link"
+                title=""
+                href="">
+                Lorem Ipsum
+              </a>
+            </li>
+            <li class="db-menu-item">
+              <a
+                class="db-menu-link"
+                title=""
+                href="">
+                Lorem Ipsum
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="db-col">
+          <h5>
+            SOCIALS
+          </h5>
+          <ul class="db-socials-list">
+            <li class="db-socials-item">
+              <a
+                class="db-socials-link"
+                title=""
+                href="">
+                <svg
+                  class="db-svg"
+                  width="60"
+                  height="60"
+                  viewBox="0 0 60 60"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <rect
+                    id="rect_01"
+                    x="0.5"
+                    y="0.5"
+                    width="59"
+                    height="59"
+                    rx="29.5"
+                    stroke="#AA27B1" />
+                  <path
+                    id="path_01"
+                    d="M31.8891 19.6154C31.7886 19.4115 31.5619 19.1885 31.3545 19.0897C31.1796 19.0069 30.7552 18.9718 30.577 19.026C30.3989 19.0801 30.1267 19.2649 30.0231 19.3988C29.8093 19.676 29.7833 19.8066 29.7833 20.6064C29.7833 21.2755 29.7801 21.3233 29.7283 21.3073C29.5274 21.2468 26.9099 20.5554 26.8775 20.5554C26.8548 20.5554 26.8224 20.5809 26.8062 20.6159C26.7803 20.6637 26.8483 20.8198 27.1528 21.4189C28.2186 23.5027 28.873 25.4081 29.0901 27.049C29.1678 27.6194 29.1646 28.5944 29.0901 29.015C28.8957 30.076 28.3029 31.3155 27.1885 32.9851C26.9941 33.275 26.8353 33.5331 26.8353 33.5586C26.8353 33.5841 26.858 33.6383 26.8872 33.6765L26.9358 33.7466H29.7833V35.8814H28.3515C26.8839 35.8814 26.6507 35.8655 26.3235 35.754C25.7306 35.5469 25.235 35.0084 25.073 34.3966C25.0439 34.2883 25.0212 34.0716 25.0212 33.9123C25.0212 33.7848 25.0464 33.6955 25.0155 33.6331C24.9329 33.4664 24.4494 33.4917 22.0116 33.4917C19.7925 33.4917 19.1575 33.5013 19.0928 33.5331C19.015 33.5714 19.0118 33.5905 19.002 33.8741C18.9826 34.438 19.1025 35.1677 19.3195 35.8241C20.0096 37.8951 21.7654 39.5042 23.9132 40.0363C24.0399 40.068 24.1394 40.0945 24.2398 40.1166C24.7872 40.2375 25.3637 40.2307 30.5123 40.2307H36.0519L36.3629 40.1479C37.2862 39.8961 38.0313 39.278 38.8995 38.0481C39.068 37.8123 39.4049 37.3025 39.6479 36.917C40.3087 35.8782 40.5938 35.4736 40.8109 35.2505C41.1737 34.8777 41.8184 34.4604 42.5667 34.1099C42.7676 34.0143 42.949 33.9091 42.9684 33.8741C43.0105 33.7976 43.0105 32.5995 42.9684 32.4912C42.9522 32.4466 42.9036 32.402 42.8647 32.3924C42.8194 32.3829 41.6888 32.6888 39.9232 33.189C38.3455 33.6383 36.9979 34.0238 36.9266 34.0461C36.8294 34.078 36.6448 34.2373 36.1653 34.7089C35.5271 35.3334 35.2323 35.5692 34.9472 35.6966C34.5812 35.8559 34.5326 35.8591 33.227 35.8719L31.9863 35.8846V33.7466H33.768L34.0985 33.4471C35.0055 32.6282 36.0195 31.3665 36.4666 30.503C36.8456 29.7701 36.9817 29.2794 36.9817 28.6326C36.9817 28.04 36.8715 27.5716 36.567 26.877C35.9645 25.4878 34.4548 23.7353 32.6083 22.2823C32.3783 22.1039 32.1968 21.9828 32.1223 21.9669L32.0025 21.9382L31.9861 20.8483C31.9701 19.7874 31.9698 19.7711 31.8891 19.6154Z"
+                    fill="#CAC7D0" />
+                  <path
+                    id="path_01"
+                    d="M26.168 23.885C25.9153 23.2733 25.8667 23.1713 25.7987 23.1363C25.7144 23.0917 25.6853 23.0949 25.6108 23.1586C25.5201 23.2351 20.4145 31.0988 20.3951 31.1912C20.3854 31.2326 20.4048 31.29 20.4372 31.325C20.4955 31.3888 20.5538 31.3888 23.1779 31.3888H25.8602L25.938 31.2836C26.2166 30.9172 26.8353 29.7032 27.0103 29.1902C27.1561 28.7569 27.1917 28.5339 27.1917 28.0209C27.1917 26.928 26.8451 25.5196 26.168 23.885Z"
+                    fill="#CAC7D0" />
+                </svg>
+              </a>
+            </li>
+            <li class="db-socials-item">
+              <a
+                class="db-socials-link"
+                title=""
+                href="">
+                <svg
+                  class="db-svg"
+                  width="60"
+                  height="60"
+                  viewBox="0 0 60 60"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <rect
+                    id="rect_01"
+                    x="0.5"
+                    y="0.5"
+                    width="59"
+                    height="59"
+                    rx="29.5"
+                    stroke="#AA27B1" />
+                  <path
+                    id="path_01"
+                    d="M37.6244 23.3272C36.1979 22.7026 34.6926 22.2568 33.1461 22.0009C33.1321 21.9987 33.1177 22.0006 33.1049 22.0065C33.0921 22.0124 33.0815 22.0219 33.0746 22.0337C32.8807 22.3617 32.6662 22.7907 32.5163 23.1265C30.8493 22.8851 29.1537 22.8851 27.4866 23.1265C27.3195 22.7524 27.1303 22.3875 26.9201 22.0337C26.9131 22.022 26.9025 22.0126 26.8897 22.0067C26.877 22.0009 26.8626 21.9989 26.8486 22.0009C25.3018 22.2554 23.7962 22.7015 22.3703 23.3272C22.3581 23.3317 22.3479 23.34 22.3414 23.3509C19.4897 27.4165 18.7074 31.3823 19.091 35.2984C19.0924 35.3167 19.1047 35.3351 19.1199 35.3469C20.7805 36.5206 22.6379 37.4166 24.6129 37.997C24.6269 38.0012 24.6419 38.001 24.6557 37.9965C24.6695 37.992 24.6815 37.9835 24.6899 37.972C25.1134 37.421 25.4902 36.8399 25.8147 36.2285C25.8214 36.2159 25.8237 36.2016 25.8213 36.1876C25.8188 36.1737 25.8116 36.1609 25.8009 36.1511C25.7938 36.1447 25.7854 36.1398 25.7762 36.1367C25.1838 35.9195 24.61 35.6585 24.0602 35.3561C24.0448 35.3478 24.0334 35.3342 24.0283 35.3181C24.0232 35.3019 24.0247 35.2846 24.0327 35.2695C24.0374 35.2597 24.0444 35.2512 24.0533 35.2446C24.1688 35.1619 24.2843 35.0753 24.3943 34.9888C24.404 34.9813 24.4157 34.9765 24.428 34.9749C24.4404 34.9733 24.453 34.9749 24.4644 34.9796C28.0655 36.5486 31.9636 36.5486 35.5207 34.9796C35.5326 34.9747 35.5456 34.9729 35.5585 34.9746C35.5713 34.9762 35.5834 34.9811 35.5936 34.9888C35.7036 35.0753 35.8191 35.1619 35.9346 35.2446C35.9439 35.2511 35.9514 35.2597 35.9564 35.2697C35.9614 35.2797 35.9638 35.2907 35.9632 35.3018C35.9627 35.3128 35.9593 35.3235 35.9533 35.333C35.9473 35.3425 35.939 35.3504 35.9291 35.3561C35.3805 35.6612 34.806 35.9219 34.2117 36.1354C34.2022 36.1386 34.1936 36.1439 34.1865 36.1507C34.1794 36.1575 34.1739 36.1657 34.1704 36.1747C34.1673 36.1835 34.166 36.1928 34.1667 36.202C34.1674 36.2113 34.1701 36.2203 34.1746 36.2285C34.5046 36.8385 34.8827 37.421 35.2979 37.972C35.3063 37.9835 35.3183 37.992 35.3322 37.9965C35.346 38.001 35.361 38.0012 35.3749 37.997C37.3533 37.4184 39.2137 36.5223 40.8763 35.3469C40.8846 35.3414 40.8915 35.3342 40.8965 35.3258C40.9015 35.3174 40.9044 35.308 40.9051 35.2984C41.3644 30.771 40.1365 26.8379 37.6519 23.3522C37.6494 23.3464 37.6457 23.3412 37.6409 23.3369C37.6362 23.3326 37.6306 23.3293 37.6244 23.3272ZM26.3523 32.9133C25.2674 32.9133 24.3751 31.9635 24.3751 30.7985C24.3751 29.6323 25.2509 28.6824 26.3523 28.6824C27.4619 28.6824 28.346 29.6401 28.3295 30.7985C28.3295 31.9635 27.4536 32.9133 26.3523 32.9133ZM33.6617 32.9133C32.5782 32.9133 31.6845 31.9635 31.6845 30.7985C31.6845 29.6323 32.5603 28.6824 33.6617 28.6824C34.7713 28.6824 35.6568 29.6401 35.6389 30.7985C35.6389 31.9635 34.7713 32.9133 33.6617 32.9133Z"
+                    fill="#CAC7D0" />
+                </svg>
+              </a>
+            </li>
+            <li class="db-socials-item">
+              <a
+                class="db-socials-link"
+                title=""
+                href="">
+                <svg
+                  class="db-svg"
+                  width="60"
+                  height="60"
+                  viewBox="0 0 60 60"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    id="path_01"
+                    d="M59.5 30C59.5 13.7076 46.2924 0.5 30 0.5C13.7076 0.5 0.5 13.7076 0.5 30C0.5 46.2924 13.7076 59.5 30 59.5C46.2924 59.5 59.5 46.2924 59.5 30Z"
+                    stroke="#AA27B1" />
+                  <path
+                    id="path_02"
+                    d="M19 20H21H21.5H23.5H26L30.9219 26.5625L36.5 20H40L32.5625 28.75L41 40H39H38.5H36.5H34L28.8438 33.125L23 40H19.5L27.2031 30.9375L19 20ZM30.1719 31.5625L35 38H37L31.2344 30.3125L30.1719 31.5625ZM29.5938 28.125L28.5312 29.375L23 22H25L29.5938 28.125Z"
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    fill="#CAC7D0" />
+                </svg>
+              </a>
+            </li>
+            <li class="db-socials-item">
+              <a
+                class="db-socials-link"
+                title=""
+                href="">
+                <svg
+                  class="db-svg"
+                  width="60"
+                  height="60"
+                  viewBox="0 0 60 60"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <rect
+                    id="rect_01"
+                    x="0.5"
+                    y="0.5"
+                    width="59"
+                    height="59"
+                    rx="29.5"
+                    stroke="#AA27B1" />
+                  <path
+                    id="path_01"
+                    d="M32.0286 20.0012C32.7583 19.9984 33.488 20.0058 34.2176 20.0232L34.4116 20.0302C34.6356 20.0382 34.8566 20.0482 35.1236 20.0602C36.1876 20.1102 36.9136 20.2782 37.5506 20.5252C38.2106 20.7792 38.7666 21.1232 39.3226 21.6792C39.831 22.1788 40.2244 22.7832 40.4756 23.4502C40.7226 24.0872 40.8906 24.8142 40.9406 25.8782C40.9526 26.1442 40.9626 26.3662 40.9706 26.5902L40.9766 26.7842C40.9943 27.5134 41.002 28.2428 40.9996 28.9722L41.0006 29.7182V31.0282C41.003 31.758 40.9954 32.4877 40.9776 33.2172L40.9716 33.4112C40.9636 33.6352 40.9536 33.8562 40.9416 34.1232C40.8916 35.1872 40.7216 35.9132 40.4756 36.5502C40.2252 37.218 39.8317 37.8228 39.3226 38.3222C38.8225 38.8306 38.2179 39.224 37.5506 39.4752C36.9136 39.7222 36.1876 39.8902 35.1236 39.9402C34.8566 39.9522 34.6356 39.9622 34.4116 39.9702L34.2176 39.9762C33.4881 39.994 32.7583 40.0017 32.0286 39.9992L31.2826 40.0002H29.9736C29.2438 40.0027 28.5141 39.995 27.7846 39.9772L27.5906 39.9712C27.3532 39.9626 27.1158 39.9526 26.8786 39.9412C25.8146 39.8912 25.0886 39.7212 24.4506 39.4752C23.7833 39.2246 23.1788 38.8311 22.6796 38.3222C22.1706 37.8225 21.7768 37.2178 21.5256 36.5502C21.2786 35.9132 21.1106 35.1872 21.0606 34.1232C21.0494 33.8859 21.0394 33.6486 21.0306 33.4112L21.0256 33.2172C21.0071 32.4877 20.9988 31.758 21.0006 31.0282V28.9722C20.9978 28.2428 21.0051 27.5134 21.0226 26.7842L21.0296 26.5902C21.0376 26.3662 21.0476 26.1442 21.0596 25.8782C21.1096 24.8132 21.2776 24.0882 21.5246 23.4502C21.7759 22.7829 22.1705 22.1787 22.6806 21.6802C23.1795 21.171 23.7835 20.7768 24.4506 20.5252C25.0886 20.2782 25.8136 20.1102 26.8786 20.0602L27.5906 20.0302L27.7846 20.0252C28.5138 20.0068 29.2432 19.9985 29.9726 20.0002L32.0286 20.0012ZM31.0006 25.0012C30.3381 24.9919 29.6803 25.1143 29.0656 25.3613C28.4508 25.6083 27.8912 25.9751 27.4194 26.4403C26.9476 26.9055 26.573 27.4598 26.3173 28.071C26.0616 28.6822 25.9299 29.3382 25.9299 30.0007C25.9299 30.6633 26.0616 31.3192 26.3173 31.9305C26.573 32.5417 26.9476 33.096 27.4194 33.5612C27.8912 34.0264 28.4508 34.3931 29.0656 34.6402C29.6803 34.8872 30.3381 35.0096 31.0006 35.0002C32.3267 35.0002 33.5984 34.4734 34.5361 33.5358C35.4738 32.5981 36.0006 31.3263 36.0006 30.0002C36.0006 28.6741 35.4738 27.4024 34.5361 26.4647C33.5984 25.527 32.3267 25.0012 31.0006 25.0012ZM31.0006 27.0012C31.3991 26.9939 31.7951 27.066 32.1654 27.2134C32.5357 27.3608 32.8729 27.5806 33.1574 27.8598C33.4418 28.139 33.6678 28.4721 33.822 28.8396C33.9763 29.2071 34.0558 29.6016 34.0558 30.0002C34.0559 30.3988 33.9766 30.7934 33.8224 31.1609C33.6683 31.5285 33.4424 31.8617 33.1581 32.141C32.8737 32.4203 32.5366 32.6401 32.1663 32.7876C31.796 32.9352 31.4001 33.0074 31.0016 33.0002C30.2059 33.0002 29.4429 32.6842 28.8803 32.1216C28.3176 31.5589 28.0016 30.7959 28.0016 30.0002C28.0016 29.2046 28.3176 28.4415 28.8803 27.8789C29.4429 27.3163 30.2059 27.0002 31.0016 27.0002L31.0006 27.0012ZM36.2506 23.5012C35.928 23.5141 35.6229 23.6514 35.3992 23.8842C35.1755 24.117 35.0506 24.4274 35.0506 24.7502C35.0506 25.0731 35.1755 25.3834 35.3992 25.6163C35.6229 25.8491 35.928 25.9863 36.2506 25.9992C36.5821 25.9992 36.9 25.8675 37.1345 25.6331C37.3689 25.3987 37.5006 25.0808 37.5006 24.7492C37.5006 24.4177 37.3689 24.0998 37.1345 23.8653C36.9 23.6309 36.5821 23.4992 36.2506 23.4992V23.5012Z"
+                    fill="#CAC7D0" />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <p class="db-copyright">
+        &copy; 2023 Deadbeat - All rights reserved
+      </p>
+    </div>
+  </section>
 </footer>
