--- a/styles/db-theme/_reset.scss
+++ b/styles/db-theme/_reset.scss
@@ -27,9 +27,10 @@ body {
   font-size: 14px;
   line-height: 1em;
   // background-color: transparent;
-  background-color: #F2F2F2;
+  background-color: #0E0914;
   min-width: 380px;
   width: 100%;
+  overflow-x: hidden;
 }
 
 html, body, main, nav, header, footer, aside, section, div {
