--- a/styles/db-theme/_classes.scss
+++ b/styles/db-theme/_classes.scss
@@ -4,7 +4,7 @@
 .db-section {
   position: relative;
   width: 100%;
-  padding: 25px;
+  padding: 20px;
 }
 
 .db-container {
@@ -52,4 +52,28 @@
   .h-auto {
     height: auto;
   }
+}
+
+.db-scroll-bar {
+	// Width & Height
+	&::-webkit-scrollbar {
+		width: 8px;
+		height: 8px;
+	}
+
+	// Track
+	&::-webkit-scrollbar-track {
+		background-color: transparent;
+	}
+
+	// Handle
+	&::-webkit-scrollbar-thumb {
+		background-color: #D6D6D6;
+		border-radius: 4px;
+	}
+
+	// Handle on hover
+	&::-webkit-scrollbar-thumb:hover {
+		background-color: #888888;
+	}
 }
