fix: Oswald font not rendering properly

--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -17,7 +17,7 @@
               loading="lazy" />
           </a>
           <h4>
-            Subsribe to our newsletter
+            Subscribe to our newsletter
           </h4>
           <p>
             Get updated to our exciting promotions, limited offers, articles and resources.
