--- a/styles/db-theme/_variables.scss
+++ b/styles/db-theme/_variables.scss
@@ -2,7 +2,7 @@
 /*   VARIABLES   */
 /*===============*/
 :root {
-  --primaryFontFamily: 'Owswald', sans-serif;
+  --primaryFontFamily: 'Oswald', sans-serif;
   --secondaryFontFamily: 'Quattrocento', serif;
   --tertiaryFontFamily: 'Montserrat', sans-serif;
 
