--- a/assets/theme.css
+++ b/assets/theme.css
@@ -11,7 +11,7 @@
 /*   VARIABLES   */
 /*===============*/
 :root {
-  --primaryFontFamily: "Owswald", sans-serif;
+  --primaryFontFamily: "Oswald", sans-serif;
   --secondaryFontFamily: "Quattrocento", serif;
   --tertiaryFontFamily: "Montserrat", sans-serif;
   --blackColor: #000000;
@@ -183,12 +183,18 @@ ul, ol {
 .db-footer .db-section--newsletter .db-container .db-row {
   justify-content: space-between;
   align-items: center;
-  gap: 20px;
+  gap: 20px 180px;
   height: 100%;
+}
+@media only screen and (max-width: 1440px) {
+  .db-footer .db-section--newsletter .db-container .db-row {
+    gap: 20px 100px;
+  }
 }
 @media only screen and (max-width: 1080px) {
   .db-footer .db-section--newsletter .db-container .db-row {
     flex-direction: column;
+    gap: 20px 60px;
   }
 }
 .db-footer .db-section--newsletter .db-container .db-row .db-col:nth-of-type(1) {
@@ -241,6 +247,7 @@ ul, ol {
   font-weight: 500;
   text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
   line-height: 1.5em;
+  max-width: 340px;
   max-height: 4.5em;
   min-height: 1.5em;
   height: auto;
@@ -356,14 +363,9 @@ ul, ol {
 }
 .db-footer .db-section--newsletter .db-container .db-row .db-col:nth-of-type(2) .db-img-figure01 {
   position: absolute;
-  right: 0;
+  left: 0;
   bottom: 0;
   height: 512px;
-}
-@media only screen and (max-width: 1440px) {
-  .db-footer .db-section--newsletter .db-container .db-row .db-col:nth-of-type(2) .db-img-figure01 {
-    height: 400px;
-  }
 }
 @media only screen and (max-width: 1080px) {
   .db-footer .db-section--newsletter .db-container .db-row .db-col:nth-of-type(2) .db-img-figure01 {
