--- a/styles/db-theme/_footer.scss
+++ b/styles/db-theme/_footer.scss
@@ -20,11 +20,16 @@
       .db-row {
         justify-content: space-between;
         align-items: center;
-        gap: 20px;
+        gap: 20px 180px;
         height: 100%;
+
+        @media only screen and (max-width: 1440px) {
+          gap: 20px 100px;
+        }
 
         @media only screen and (max-width: 1080px) {
           flex-direction: column;
+          gap: 20px 60px;
         }
 
         .db-col {
@@ -48,9 +53,7 @@
                 margin: 0 auto 16px;
               }
               
-              .db-site-logo {
-
-              }
+              .db-site-logo {}
             }
 
             h4 {
@@ -80,6 +83,7 @@
               font-weight: 500;
               text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
               line-height: 1.5em;
+              max-width: 340px;
               max-height: calc(1.5em * 3);
               min-height: calc(1.5em * 1);
               height: auto;
@@ -196,13 +200,9 @@
 
             .db-img-figure01 {
               position: absolute;
-              right: 0;
+              left: 0;
               bottom: 0;
               height: 512px;
-
-              @media only screen and (max-width: 1440px) {
-                height: 400px;
-              }
 
               @media only screen and (max-width: 1080px) {
                 position: static;
